# lfd-omind

./: .gitignore  README.md
ergodic-controller/: README.md  ergodic_system_properties.json  monte_carlo.py
ergodic-controller/src/cartpole_gazebo/: package.xml
ergodic-controller/src/cartpole_gazebo/config/: cart_pole_controller.yaml
ergodic-controller/src/cartpole_gazebo/launch/: cartpole_control.launch
ergodic-controller/src/cartpole_gazebo/scripts/: cartpole_trajectories.py  key_control_cart.py
ergodic-controller/src/ergodic_controller/: __init__.py  controller_ilqr.py  ergodic_measure.py  ilqr_controller.py  lqr_controller.py  plot_ergodic_metric.py
ergodic-controller/src/test/: mpc_test.py
lfd-omnid-algorithm/: README.md  TODO.md  requirements.txt
lfd-omnid-algorithm/src/cartpole/: __init__.py  cartpole_alg.py  cartpole_helper.py  ergodic_helper.py  grad_descent.py  grad_descent_lqr.py  phi_x.py  plot_fourier.py
lfd-omnid-algorithm/src/cartpole_gazebo/: urdf_extratxt.txt
lfd-omnid-algorithm/src/cartpole_gazebo/dynamics/: test.csv  test1.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7.csv  test9.csv
lfd-omnid-algorithm/src/cartpole_gazebo/launch/: cartpole_control.launch
lfd-omnid-algorithm/src/cartpole_gazebo/scripts/: .pole_dyn.py.swp  cartpole_Qlearn.py  cartpole_qlearning 2.py  cartpole_qlearning.py  cmd_vel_sub.py  (+5 more)
lfd-omnid-algorithm/src/ergodic_controller/: __init__.py  controller_ilqr.py  controller_lqr.py  ergodic_measure.py  plot_ergodic_metric.py
lfd-omnid-algorithm/src/test/: ergodic_measure_test.py  mpc_test.py
(+1 files in other folders)
